tests/reducing.m31.ref
File "./reducing.m31", line 5, characters 16-21: Syntax error
  Unexpected: reduce
