tests/reducing.m31
constant N : Type
constant O : N
constant S (n : N) : N

constant plus (reduce n : N) (reduce m : N) : N

constant plus_O_l : forall (n : N), plus O n == n

let action = top_beta plus_O_l
#include "../std/equal_handle.m31"

check plus (plus O O) O

check whnf (plus (plus O (S O)) (plus O O))

